// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-tree no categories should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
"
`;

exports[`write-tree no categories should write an empty readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree no categories should write the netlify _headers file 1`] = `
"/*
  Content-Security-Policy: default-src 'self'; style-src 'self' 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-PjBkwE8xcYZAp+HsnzzOVNqa/Ra+/v1Fnx6f0PW6ic4=' 'unsafe-hashes' 'sha256-laxniBKFE69CPUpLCGftSNNcrHa/q3ajB6sagR6TudM=';
  X-Frame-Options: DENY
  X-Content-Type-Options: nosniff
  X-XSS-Protection: 1; mode=block
"
`;

exports[`write-tree one category, no page with image should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

<img src=\\"./category.png\\" alt=\\"A screenshot of the Category\\"
  width=\\"740\\" height=\\"80\\" style=\\"height: auto\\" />

> Category description.

"
`;

exports[`write-tree one category, no page with image should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, no page with image should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
"
`;

exports[`write-tree one category, one page with image example should write a category/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -bool true
\`\`\`
<img
  src=\\"./category-page-true.png\\"
  alt=\\"Example output with value set to true\\"
  width=\\"600\\" height=\\"400\\" style=\\"height: auto\\"
/>


## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -bool false
\`\`\`
<img
  src=\\"./category-page-false.png\\"
  alt=\\"Example output with value set to false\\"
  width=\\"400\\" height=\\"200\\" style=\\"height: auto\\"
/>


## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with image example should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page](./page.html)
"
`;

exports[`write-tree one category, one page with image example should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page](./category/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, one page with image example should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page'
"
`;

exports[`write-tree one category, one page with text and possible values example should write a category/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string
  * start
  * middle
  * end

## Set to \`start\`
\`\`\`bash
defaults write com.apple.category page -string start
\`\`\`

- output when value is start

## Set to \`middle\` (default value)
\`\`\`bash
defaults write com.apple.category page -string middle
\`\`\`

- output when value is middle

## Set to \`end\`
\`\`\`bash
defaults write com.apple.category page -string end
\`\`\`

- output when value is end

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with text and possible values example should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page](./page.html)
"
`;

exports[`write-tree one category, one page with text and possible values example should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page](./category/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, one page with text and possible values example should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page'
"
`;

exports[`write-tree one category, one page with text example with an after command should write a category/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

## Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop && killall App
\`\`\`

- output when value is ~/Desktop

## Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures && killall App
\`\`\`

- output when value is ~/Pictures

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-tree one category, one page with text example with an after command should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page](./page.html)
"
`;

exports[`write-tree one category, one page with text example with an after command should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page](./category/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, one page with text example with an after command should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page'
"
`;

exports[`write-tree one category, one page with text example with requirements should write a category/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

## Requirements
- [\`com.apple.category2 another-key\`](../../another-category/another-key.html#set-to-true) must be set to \`true\`
- [\`com.apple.category2 a-third-key\`](../../a-third-category/a-third-key.html#set-to-0.5) must be set to \`0.5\`

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -string true && killall App
\`\`\`

- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -string false && killall App
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-tree one category, one page with text example with requirements should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page](./page.html)
"
`;

exports[`write-tree one category, one page with text example with requirements should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page](./category/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, one page with text example with requirements should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page'
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a category/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -bool ~/Desktop
\`\`\`

- output when value is ~/Desktop

## Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -bool ~/Pictures
\`\`\`

- output when value is ~/Pictures

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page](./page.html)
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page](./category/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page'
"
`;

exports[`write-tree one category, one page with video example should write a category/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: float

## Set to \`0\` (default value)
\`\`\`bash
defaults write com.apple.category page -float 0
\`\`\`
<video autoplay loop muted playsinline width=\\"750\\" height=\\"400\\" style=\\"max-width: 100%; height: auto\\">
  <source src=\\"./category-page-0.mp4\\" type=\\"video/mp4\\">
  Example output with value set to 0
</video>


## Set to \`0.5\`
\`\`\`bash
defaults write com.apple.category page -float 0.5
\`\`\`
<video autoplay loop muted playsinline width=\\"720\\" height=\\"390\\" style=\\"max-width: 100%; height: auto\\">
  <source src=\\"./category-page-0.5.mp4\\" type=\\"video/mp4\\">
  Example output with value set to 0.5
</video>


## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with video example should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page](./page.html)
"
`;

exports[`write-tree one category, one page with video example should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page](./category/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, one page with video example should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page'
"
`;

exports[`write-tree one category, two pages should write a category/page1.md file using the page template 1`] = `
"---
metaTitle: \\"Page 1 | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page 1\\"
  - name: \\"description\\"
    content: \\"Page 1 description.\\"
  - property: \\"og:description\\"
    content: \\"Page 1 description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page 1

> Page 1 description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page1 -bool true
\`\`\`

- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page1 -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page1
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page1
\`\`\`
"
`;

exports[`write-tree one category, two pages should write a category/page2.md file using the page template 1`] = `
"---
metaTitle: \\"Page 2 | Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category > Page 2\\"
  - name: \\"description\\"
    content: \\"Page 2 description.\\"
  - property: \\"og:description\\"
    content: \\"Page 2 description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page 2

> Page 2 description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\`
\`\`\`bash
defaults write com.apple.category page2 -bool true
\`\`\`

- output when value is true

## Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category page2 -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page2
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page2
\`\`\`
"
`;

exports[`write-tree one category, two pages should write a category/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category\\"
  - name: \\"description\\"
    content: \\"Category description.\\"
  - property: \\"og:description\\"
    content: \\"Category description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category

> Category description.

- [Page 1](./page1.html)
- [Page 2](./page2.html)
"
`;

exports[`write-tree one category, two pages should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category
- [Page 1](./category/page1.html)
- [Page 2](./category/page2.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree one category, two pages should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category
      collapsable: false
      path: '/category/'
      children:
        - 'category/page1'
        - 'category/page2'
"
`;

exports[`write-tree two categories, one page in each should write a category1/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category 1 | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category 1 > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category1 page -bool true
\`\`\`

- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category1 page -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category1 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category1 page
\`\`\`
"
`;

exports[`write-tree two categories, one page in each should write a category1/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category 1 | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category 1\\"
  - name: \\"description\\"
    content: \\"Category 1 description.\\"
  - property: \\"og:description\\"
    content: \\"Category 1 description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category 1

> Category 1 description.

- [Page](./page.html)
"
`;

exports[`write-tree two categories, one page in each should write a category2/page.md file using the page template 1`] = `
"---
metaTitle: \\"Page | Category 2 | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category 2 > Page\\"
  - name: \\"description\\"
    content: \\"Page description.\\"
  - property: \\"og:description\\"
    content: \\"Page description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Page

> Page description.

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\`
\`\`\`bash
defaults write com.apple.category2 page -bool true
\`\`\`

- output when value is true

## Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category2 page -bool false
\`\`\`

- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category2 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category2 page
\`\`\`
"
`;

exports[`write-tree two categories, one page in each should write a category2/readme.md file using the category template 1`] = `
"---
metaTitle: \\"Category 2 | macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"macOS defaults > Category 2\\"
  - name: \\"description\\"
    content: \\"Category 2 description.\\"
  - property: \\"og:description\\"
    content: \\"Category 2 description.\\"
  - property: \\"twitter:card\\"
    content: \\"summary\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-1x1.jpg\\"
---
# Category 2

> Category 2 description.

- [Page](./page.html)
"
`;

exports[`write-tree two categories, one page in each should write a readme.md file using the home template 1`] = `
"---
metaTitle: \\"macOS defaults\\"
meta:
  - property: \\"og:title\\"
    content: \\"A list of macOS defaults commands with demos ✨\\"
  - name: \\"description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"og:description\\"
    content: \\"You've already copied \`defaults write\` commands. Sometimes you don't know what they do and are not sure they still work. This list of macOS defaults commands is here to help.\\"
  - property: \\"twitter:card\\"
    content: \\"summary_large_image\\"
  - property: \\"twitter:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.webp\\"
  - property: \\"og:image\\"
    content: \\"https://inspiring-hopper-66c5ab.netlify.app/media-2x1.jpg\\"
---
# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
### Category 1
- [Page](./category1/page.html)

### Category 2
- [Page](./category2/page.html)

## 🤔 How do I add a command?
The list will soon be open sourced! You'll always be welcome to submit PRs, until then reach me on
[Twitter](http://twitter.com/_YannBertrand).

## ❤️ I like this website, how can I build the same?
Thank you! I built it using [VuePress](https://vuepress.vuejs.org/). I liked the experience a lot.
"
`;

exports[`write-tree two categories, one page in each should write a vuepress config.yml file using the template 1`] = `
"---

title: 'macOS defaults'
description: 'Uncomplete list of macOS defaults commands with demos ✨'
head:
  -
    - link
    - rel: \\"preload\\"
      href: \\"/logo.svg\\"
      as: \\"image\\"
  -
    - link
    - rel: \\"apple-touch-icon\\"
      sizes: \\"180x180\\"
      href: \\"/apple-touch-icon.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"32x32\\"
      href: \\"/favicon-32x32.png\\"
  -
    - link
    - rel: \\"icon\\"
      type: \\"image/png\\"
      sizes: \\"16x16\\"
      href: \\"/favicon-16x16.png\\"
  -
    - link
    - rel: \\"manifest\\"
      href: \\"/site.webmanifest\\"
  -
    - link
    - rel: \\"mask-icon\\"
      href: \\"/safari-pinned-tab.svg\\"
      color: \\"#004bbd\\"
  -
    - meta
    - name: 'viewport'
      content: 'width=device-width,initial-scale=1'
  -
    - meta
    - name: \\"msapplication-TileColor\\"
      content: \\"#da532c\\"
  -
    - meta
    - name: \\"theme-color\\"
      content: \\"#ffffff\\"
  -
    - meta
    - http-equiv: \\"Content-Type\\"
      content: \\"text/html; charset=utf-8\\"
  -
    - meta
    - property: \\"twitter:site\\"
      content: \\"@macos_defaults\\"
  -
    - meta
    - property: \\"twitter:creator\\"
      content: \\"@_YannBertrand\\"
  -
    - meta
    - property: \\"og:site_name\\"
      content: \\"macOS defaults\\"
  -
    - meta
    - property: \\"og:url\\"
      content: \\"https://inspiring-hopper-66c5ab.netlify.app\\"
  -
    - meta
    - property: \\"og:type\\"
      content: \\"website\\"
  -
    - meta
    - property: \\"og:image:alt\\"
      content: \\"\\"
  -
    - meta
    - name: \\"author\\"
      content: \\"Yann Bertrand\\"
evergreen: true
plugins:
  - '@vuepress/medium-zoom'
themeConfig:
  logo: '/logo.svg'
  nav:
    - text: 'Home'
      link: '/'
  activeHeaderLinks: false
  sidebar:
    - title: 'Home'
      path: '/'
    - title: Category 1
      collapsable: false
      path: '/category1/'
      children:
        - 'category1/page'
    - title: Category 2
      collapsable: false
      path: '/category2/'
      children:
        - 'category2/page'
"
`;
